sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var lgr = getNombreValeurs();
	//var i = 0;
	for(i <- 0 to lgr-1){
	//while(i != lgr-1){
		if(plusPetit(i, i+1))
			i += 1;
		else{
			echange(i, i+1);
			i -= 1;
		}
		if(i == -1)
		i += 1;			
	}
}


/*
regarde à droite et à gauche
si les deux valeurs sont alignées dans le bon ordre alors
	i++
sinon 
	il les échange et i--
fsi
Si abscence valeur à gauche (i == 0)
	i++
fsi
Si abscence valeur à droite
	FIN
fsi
 */
